<resources>
    <string name="app_name">Wii Calibration</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="button">Back</string>
    <string name="sbutton">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="about_us">About Us</string>
    <string name="humber">humber</string>
    <string name="lang">Language</string>
    <string name="description">Andrew Le - N01177239, Jerreh Janneh - N01093685, Baltej Bal -N01166978</string>
    <string name="nunchuk">Wii Nunchuk</string>
    <string name="projectdescrip">This app is made to test the functions of the Wii Nunchuk’s joystick and buttons.</string>
    <string name="calibrate">Calibrate</string>
    <string name="wii">wii</string>
    <string name="history">history</string>
    <string name="test">test</string>
    <string name="opening_image">opening</string>
    <string name="welcome">WELCOME</string>

    <string name="button4">Sign Up</string>
    <string name="button5">Back</string>
    <string name="husername">Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>

    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="send_data">Send Data</string>
    <string name="enter_y_here">Enter Y here</string>
    <string name="enter_x_here">Enter X here</string>
    <string name="title_activity_results">Results</string>
    <string name="results">Results</string>
    <string name="enter_x_axis_here">Enter X Axis Here</string>
    <string name="enter_y_axis_here">Enter Y Axis Here</string>
    <string name="c_button">C Button</string>
    <string name="z_button">Z Button</string>
    <string name="remember_to_connect_your_device">Remember To Connect Your Device</string>
</resources>
